apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'com.roiex.linkchecker.LinkChecker'
sourceCompatibility = 1.8
targetCompatibility = 1.8

jar {
    manifest {
        attributes 'Main-Class': mainClassName
    }
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
}

repositories {
    jcenter()
}
dependencies {
    compile 'org.jsoup:jsoup:1.10.2'
	compile 'org.apache.httpcomponents:httpclient:4.5.3'
	compile 'commons-cli:commons-cli:1.4'
}
